re PR target/15598 (Gcc 3.4 ICE on valid code)

2004-06-08  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/15598
	* config/ia64/ia64.c (bundling): Add missed TYPE_A.

From-SVN: r82766